elk-server-gitops/clusters/aks-elkcorp-prd-01/ingress/elastic-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: elastic-gw
  namespace: elastic-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: elk.prd.azure.ctt.pt
    hosts:
    - "elastic.elk.prd.azure.ctt.pt"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: elastic-elkcorp-vs
  namespace: eck-stack
spec:
  hosts:
  - "elastic.elk.prd.azure.ctt.pt"
  gateways:
  - elastic-system/elastic-gw
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: elastic-elkcorp-es-http.eck-stack.svc.cluster.local
        port:
          number: 9200
---
