elk-server-gitops/clusters/aks-elkcorp-prd-01/ingress/logstash-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: logstash-gw
  namespace: eck-stack
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 5044
      name: tcp-logstash
      protocol: TCP
    hosts:
    - "logstash.elk.prd.azure.ctt.pt" 
  - port:
      number: 5045
      name: tcp-logstash-secure #TLS ativado
      protocol: TLS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "logstash.elk.prd.azure.ctt.pt"
  - port:
      number: 5080
      name: tcp-logstash-standard #TCP sem TLS para logs internos
      protocol: TCP
    hosts:
    - "logstash.elk.prd.azure.ctt.pt"
  - port:
      number: 5081
      name: https-logstash
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: elk.prd.azure.ctt.pt  # Nome do Secret TLS
    hosts:
    - "logstash.elk.prd.azure.ctt.pt"
  - port:
      number: 9600
      name: https-logstash-api #API HTTPS do Logstash
      protocol: TLS
    tls:
      mode: PASSTHROUGH
    hosts:
    - "logstash.elk.prd.azure.ctt.pt"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: logstash-vs
  namespace: eck-stack
spec:
  hosts:
  - logstash.elk.prd.azure.ctt.pt
  gateways:
  - logstash-gw
  tcp:
  - match:
    - port: 5044
    route:
    - destination:
        host: logstash-elkcorp-ls-beats.eck-stack.svc.cluster.local
        port:
          number: 5044
  - match:
    - port: 5045
    route:
    - destination:
        host: logstash-elkcorp-ls-beats.eck-stack.svc.cluster.local
        port:
          number: 5045
  - match:
    - port: 5080
    route:
    - destination:
        host: logstash-elkcorp-ls-beats.eck-stack.svc.cluster.local
        port:
          number: 5080
  http:
  - match:
    - port: 5081
    route:
    - destination:
        host: logstash-elkcorp-ls-otel-https.eck-stack.svc.cluster.local
        port:
          number: 5081
  tls:
  - match:
    - port: 9600
      sniHosts:
        - "logstash.elk.prd.azure.ctt.pt"
    route:
    - destination:
        host: logstash-elkcorp-ls-api.eck-stack.svc.cluster.local
        port:
          number: 9600
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: logstash-external
  namespace: eck-stack
spec:
  hosts:
  - logstash.elk.prd.azure.ctt.pt
  location: MESH_EXTERNAL
  ports:
  - number: 5044
    name: tcp-logstash
    protocol: TCP
  - number: 5045
    name: tcp-logstash-secure
    protocol: TLS
  - number: 5080
    name: tcp-logstash-standard
    protocol: TCP
  - number: 5081
    name: https-logstash
    protocol: HTTPS
  - number: 9600
    name: https-logstash-api
    protocol: TLS
  resolution: DNS
  exportTo:
  - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: logstash-destination
  namespace: eck-stack
spec:
  host: logstash-elkcorp-ls-beats.eck-stack.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: logstash-destination-api
  namespace: eck-stack
spec:
  host: logstash-elkcorp-ls-api.eck-stack.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: SIMPLE
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: logstash-peer-auth
  namespace: eck-stack
spec:
  selector:
    matchLabels:
      common.k8s.elastic.co/type: logstash
  mtls:
    mode: PERMISSIVE
# ---
# apiVersion: security.istio.io/v1beta1
# kind: PeerAuthentication
# metadata:
#   name: elasticsearch-peer-auth
#   namespace: eck-stack
# spec:
#   selector:
#     matchLabels:
#       common.k8s.elastic.co/type: elasticsearch
#   mtls:
#     mode: PERMISSIVE
