elk-server-gitops/clusters/aks-elkcorp-prd-01/ingress/observability-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: observability-gw
  namespace: istio-ingress
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: elk.prd.azure.ctt.pt
    hosts:
    - "observability.elk.prd.azure.ctt.pt"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: observability-vs
  namespace: istio-system
spec:
  hosts:
    - observability.elk.prd.azure.ctt.pt
  gateways:
    - istio-ingress/observability-gw
  http:
    - match:
      - uri:
          prefix: /grafana
      route:
      - destination:
          host: grafana.istio-system.svc.cluster.local
          port:
            number: 80
    - match:
      - uri:
          prefix: /kiali
      route:
      - destination:
          host: kiali.istio-system.svc.cluster.local
          port:
            number: 20001
    - match:
      - uri:
          prefix: /jaeger
      route:
      - destination:
          host: jaeger-jaeger-operator-jaeger-query.istio-system.svc.cluster.local
          port:
            number: 16686 
---
